# pyproj

./: .gitignore  README.md  pyproject.toml  tox.ini
src/pypkg/: sample.py
tests/pypkg/: test_sample.py
